# Bytestream

./: .clang-format  .gitignore  BytestreamLib.make  CMakeLists.txt  LICENSE  Makefile  README.md  README.rst  playground.cxx  premake5.lua
doc/: Doxyfile
include/Bytestream/: AlignedByteIterator.hxx  ArrayForward.hxx  BitArray.hxx  BitArrayView.hxx  BitArrayView.ixx  BitProxy.hxx  ByteArray.h  ByteArrayView.h  ByteIterator.hxx  ByteProxy.hxx  ConstBitArrayView.hxx  ConstBitArrayView.ixx  ConstBitIterator.hxx  ConstByteArrayView.h  ConstByteArrayView.icc  Endian.h  Endian.hxx  PackedBlock.h  PackedBlock.icc  ReadBytestream.h  ReadBytestream.icc  ReadBytestreamHelpers.h  ReadBytestreamHelpers.icc  ReadUtils.h  ReadUtils.icc  StringUtils.h  Utils.h  Utils.icc  string.hxx  utils.hxx  utils.ixx
src/: AlignedByteIterator.cxx  BitArray.cxx  BitArrayView.cxx  BitProxy.cxx  ByteArray.cxx  ByteArrayView.cxx  ByteProxy.cxx  CMakeLists.txt  ConstBitArrayView.cxx  ConstBitIterator.cxx  ConstByteArrayView.cxx  PackedBlock.cxx  ReadBytestream.cxx  ReadBytestreamHelpers.cxx  ReadUtils.cxx  StringUtils.cxx  Utils.cxx  string.cxx  utils.cxx
test/: CMakeLists.txt  testBitCopy.cxx  testBitManip.cxx  testByteArrayView.cxx  testConstByteArrayView.cxx  testReadBytestream.cxx  testReadBytestreamHelpers.cxx  testReadUtils.cxx  testStringUtils.cxx  testUtils.cxx
